version/0.37/_sources/api/solver/_autosummary/settings/recirculation_inlet_child.rst.txt
:orphan:

.. _recirculation_inlet_child:

recirculation_inlet_child
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.recirculation_inlet_child
    :show-inheritance:

.. rubric:: Attributes

==============================   ======================================

Attribute                                                       Summary

==============================   ======================================
:ref:`name <name_4>`                                Name of the object.

:ref:`locations <locations_2>`                     Input location name.

:ref:`settings <settings_21>`        Domain name to define settings on.

==============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

================================================   ================

Parent                                                      Summary

================================================   ================
:ref:`recirculation_inlet <recirculation_inlet>`       Thread-type.

================================================   ================

