version/0.42/_sources/api/solver/_autosummary/settings/recirculation_inlet_child.rst.txt
:orphan:

.. _recirculation_inlet_child:

recirculation_inlet_child
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.recirculation_inlet_child
    :show-inheritance:

.. rubric:: Attributes

==================================================   =====================================================================

Attribute                                                                                                          Summary

==================================================   =====================================================================
:ref:`name <name_5>`                                                                                   Name of the object.

:ref:`volume <volume_1>`                                             Boudary object is associated with this volume object.

:ref:`locations <locations_2>`                                                                        Input location name.

:ref:`recirculation_inlet <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

:ref:`geometry <geometry_7>`                                        Allows to change geometry model variables or settings.

:ref:`phase <phase_24>`                                                                 Domain name to define settings on.

==================================================   =====================================================================

.. rubric:: Methods

==================================   ===============================================

Method                                                                       Summary

==================================   ===============================================
:ref:`display <display_4>`                                   Display physics object.

:ref:`split <split_1>`                   Input boundary and location names to split.

:ref:`set_location <set_location>`                              Input location name.

:ref:`set_type <set_type_3>`                      Change the type for this boundary.

==================================   ===============================================

.. rubric:: Included in:

================================================   ================

Parent                                                      Summary

================================================   ================
:ref:`recirculation_inlet <recirculation_inlet>`       Thread-type.

================================================   ================

